# learn-rust

./: .gitignore
functions/: Cargo.toml
functions/src/: main.rs
generics/: Cargo.toml
generics/src/: largest.rs  lib.rs  main.rs  main2.rs  traits.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-wasm/: Cargo.toml
hello_world/: Cargo.toml
ownership/: Cargo.toml
ownership/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
slice/: Cargo.toml
slice/src/: main.rs
slice/src/utils/: mod.rs  password_utils.rs
variables/: Cargo.toml
variables/src/: main.rs
