[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Kumar Subramaniam <Kumar.Subramaniam@wnco.com>"]
edition = "2018"
description = "A sample project with wasm-pack"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
